Fixed z-index glitch

--- a/src/web/views/Dashboard/style.scss
+++ b/src/web/views/Dashboard/style.scss
@@ -57,7 +57,7 @@
   display: inline;
   top: 10px;
   right: 10px;
-  z-index: 10;
+  z-index: 5;
   color: #bee6db;
   font-size: 12px;
 }
